Fixed book alignment

--- a/sass/fantasy-pages-scss/gothic.scss
+++ b/sass/fantasy-pages-scss/gothic.scss
@@ -86,6 +86,8 @@ body {
 .book-menu {
 display: flex;
 flex-direction: row;
+justify-content: space-evenly;
+width: 100%;
 
 
 }
